// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CondensedCheckList component renders checks 1`] = `
<EuiFlexGrid
  columns={3}
  style={
    Object {
      "paddingLeft": "40px",
    }
  }
>
  <EuiFlexItem>
    <EuiFlexGroup>
      <EuiFlexItem>
        <MonitorListStatusColumn
          status="mixed"
          timestamp="123"
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <LocationLink
          location="us-east-1"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiToolTip
      content={
        Array [
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="danger"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.1
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="primary"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.2
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
        ]
      }
      delay="regular"
      position="right"
      title="Check statuses"
    >
      <EuiBadge
        color="secondary"
      >
        2 checks
      </EuiBadge>
    </EuiToolTip>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiFlexGroup>
      <EuiFlexItem>
        <MonitorListStatusColumn
          status="up"
          timestamp="125"
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <LocationLink
          location="us-west-1"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiToolTip
      content={
        Array [
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="danger"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.1
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="danger"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.2
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
        ]
      }
      delay="regular"
      position="right"
      title="Check statuses"
    >
      <EuiBadge
        color="primary"
      >
        2 checks
      </EuiBadge>
    </EuiToolTip>
  </EuiFlexItem>
</EuiFlexGrid>
`;

exports[`CondensedCheckList component renders null in place of child status with missing ip 1`] = `
<EuiFlexGrid
  columns={3}
  style={
    Object {
      "paddingLeft": "40px",
    }
  }
>
  <EuiFlexItem>
    <EuiFlexGroup>
      <EuiFlexItem>
        <MonitorListStatusColumn
          status="mixed"
          timestamp="123"
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <LocationLink
          location="us-east-1"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiToolTip
      content={
        Array [
          null,
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="primary"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.2
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
        ]
      }
      delay="regular"
      position="right"
      title="Check statuses"
    >
      <EuiBadge
        color="secondary"
      >
        2 checks
      </EuiBadge>
    </EuiToolTip>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiFlexGroup>
      <EuiFlexItem>
        <MonitorListStatusColumn
          status="up"
          timestamp="125"
        />
      </EuiFlexItem>
      <EuiFlexItem>
        <LocationLink
          location="us-west-1"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiToolTip
      content={
        Array [
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="danger"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.1
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
          <ForwardRef>
            <EuiFlexItem>
              <EuiHealth
                color="danger"
              />
            </EuiFlexItem>
            <EuiFlexItem>
              127.0.0.2
            </EuiFlexItem>
            <EuiFlexItem>
              a few moments ago
            </EuiFlexItem>
          </ForwardRef>,
        ]
      }
      delay="regular"
      position="right"
      title="Check statuses"
    >
      <EuiBadge
        color="primary"
      >
        2 checks
      </EuiBadge>
    </EuiToolTip>
  </EuiFlexItem>
</EuiFlexGrid>
`;
